; ModuleID = '/home/carl/AnghaBench/postgres/src/fe_utils/extr_string_utils.c_defaultGetLocalPQExpBuffer.c'
source_filename = "/home/carl/AnghaBench/postgres/src/fe_utils/extr_string_utils.c_defaultGetLocalPQExpBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@defaultGetLocalPQExpBuffer.id_return = internal global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @defaultGetLocalPQExpBuffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @defaultGetLocalPQExpBuffer() #0 {
  %1 = load i32*, i32** @defaultGetLocalPQExpBuffer.id_return, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @defaultGetLocalPQExpBuffer.id_return, align 8
  %5 = call i32 @resetPQExpBuffer(i32* %4)
  br label %8

6:                                                ; preds = %0
  %7 = call i32* (...) @createPQExpBuffer()
  store i32* %7, i32** @defaultGetLocalPQExpBuffer.id_return, align 8
  br label %8

8:                                                ; preds = %6, %3
  %9 = load i32*, i32** @defaultGetLocalPQExpBuffer.id_return, align 8
  ret i32* %9
}

declare dso_local i32 @resetPQExpBuffer(i32*) #1

declare dso_local i32* @createPQExpBuffer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
